k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: go-frontend-k8s
spec:
  replicas: 1
  selector:
    matchLabels: { app: web }  
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: go-k8s-web:1.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
