k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: go-frontend-k8s
spec: 
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
