k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: go-frontend-k8s
spec:
  selector: { app: web }
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
